<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/color_fondo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="32dp">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo"
            android:layout_marginBottom="40dp" />

        <TextView
            android:id="@+id/tvHeaderGala"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo_crear_gala"
            android:textColor="@color/color_principal_oscuro"
            android:textSize="26sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginBottom="32dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_selecciona_edicion"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginBottom="8dp"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:hint="@string/hint_selecciona_edicion"
            app:boxStrokeColor="@color/color_principal"
            app:hintTextColor="@color/color_principal_oscuro"
            app:boxCornerRadiusTopStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusBottomEnd="16dp">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteEdiciones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_fecha_gala"
            app:boxStrokeColor="@color/color_principal"
            app:hintTextColor="@color/color_principal_oscuro"
            app:boxCornerRadiusTopStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusBottomEnd="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFechaRealizacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:clickable="true"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGuardarGala"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="32dp"
            android:text="@string/btn_guardar_gala"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:backgroundTint="@color/color_principal"
            app:cornerRadius="16dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnVolver"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="12dp"
            android:text="@string/btn_volver"
            android:textAllCaps="false"
            app:backgroundTint="@android:color/black"
            app:cornerRadius="16dp" />

    </LinearLayout>
</ScrollView>