<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/color_fondo">

    <ImageView
        android:id="@+id/logoVotacionGalas"
        android:layout_width="254dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/logo"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/tvSeleccionaGala"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/txt_selecciona_gala"
        android:textColor="@color/color_principal_oscuro"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/lvGalasVotables"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:divider="@color/color_principal_oscuro"
        android:dividerHeight="1dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnVolverSeleccion"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:backgroundTint="@color/color_principal"
        android:text="@string/btn_volver_menu"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:cornerRadius="12dp" />

</LinearLayout>